--- a/index.html
+++ b/index.html
@@ -32,13 +32,52 @@
         </nav>
         
     </header>
-    <!-- <div class="jumbo container">
-            <h1>
-                Tutto ciò che ti serve per il lavoro, in un unico posto
-            </h1>
-        </div> -->
+    <div class="jumbo clearfix">
+            <div class="text-jumbo container">
+                <h1>
+                    Tutto ciò che ti serve per il lavoro, in un unico posto
+                </h1>
+            </div>
+            <div class="container">
+                <div class="p-jumbo">
+                    <p>Finalmente tutti i tuoi strumenti, contenuti e
+                        collaboratori sono accessibili dallo stesso posto.
+                        Dropbox Business è più di uno spazio di
+                        archiviazione sicuro: è un modo intelligente e
+                        integrato per ottimizzare il flusso di lavoro esistente.</p>
+                        <div class="btnuni">
+                            <a href="#">Inizia la tua prova gratuita</a>
+                        </div>
+                        <p>Annulla in qualsiasi momento</p>
+                </div>
+            </div>
+            <div class="container">
+                <div class="jumboimg">
+                    <img src="./img/jumbo.png" alt="">
+                </div>
+            </div>
+        </div>
     <main>
         <section>
+            <div class="ctext containersmall">
+                <h1>Trova il piano Dropbox Business che fa per te</h1>
+            </div>
+            
+            <!-- radio -->
+            <div class="control-group containersmall">
+                <label class="control control-radio">
+                    Fatturazione mensile
+                        <input type="radio" name="radio" checked="checked" />
+                    <div class="control_indicator"></div>
+                </label>
+                <label class="control control-radio">
+                    Fatturazione annuale
+                        <input type="radio" name="radio" />
+                    <div class="control_indicator"></div>
+                </label>               
+            </div>
+            <!-- /radio -->
+
 
         </section>
         <section>
