index e css: section guys

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             </div>
             <!-- /radio -->
             <div class="row containersmall">
-                <div class="column debug">
-                    <h4>Singolo</h4>
+                <div class="column longer debug">
+                    <h4><i class="fa-solid fa-user"></i> Singolo</h4>
                     <h2>Professional</h2>
                     <div class="price">19.99&euro; </div>
                     <div class="spazio">/mese</div>
@@ -101,7 +101,7 @@
                     </ul>
                 </div>
                 <div class="column debug">
-                    <h4>Team</h4>
+                    <h4><i class="fa-solid fa-building"></i> Team</h4>
                     <h2>Standard</h2>
                     <div class="price">19.99&euro; </div>
                     <div class="spazio">/utente/mese, a paetire da 3 utenti</div>
@@ -124,7 +124,7 @@
                     </ul>
                 </div>
                 <div class="column debug">
-                    <h4>Team</h4>
+                    <h4><i class="fa-solid fa-building"></i> Team</h4>
                     <h2>Advanced</h2>
                     <div class="price">19.99&euro; </div>
                     <div class="spazio">/utente/mese, a paetire da 3 utenti</div>
@@ -147,16 +147,34 @@
                     </ul>
                 </div>
             </div>
+            <div class="raw debug">
+                <div class="centeredcolumn">
+                    <h4><i class="fa-solid fa-building"></i> Team</h4>
+                    <h2>Enterprise</h2>
+                    <a class="btn" href="#">Prova gratis per 30 giorni</a>
+                    <h5>Contatta l'ufficio vendite per i prezzi</h5>
+                    <div>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione qualsiasi scala.</div>
+                    
+                </div>
+            </div>  
+        </section>
+        <section>
+            <div class="containersmall clearfix">
+                <div class="guys">
+                    <img src="./img/partner.png" alt="Ragazzi camminano">
+                </div>
+                <div class="right-text">
+                    <h2>Entra in contatto con un partner Dropbox</h2>
+                    <div>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</div>
+                    <a class="btn" href="#">Trova un partner</a>
+                </div>
+            </div>
+        </section>
+        <section>
 
         </section>
         <section>
-            <!-- Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos nisi, expedita in consequatur deserunt molestiae? Recusandae officia in veritatis sapiente expedita quisquam eveniet aperiam at, magnam distinctio eum neque unde quia illum incidunt vero culpa nihil facilis assumenda harum quidem corrupti. Aliquid quod nesciunt obcaecati iusto accusantium! Consequuntur nihil dicta eaque illum sequi nobis amet, molestias nam minus ab unde dolor blanditiis facilis cum itaque beatae natus consequatur non explicabo? Nihil ipsam esse ratione libero nobis, magni voluptatum similique. Corporis tempore dolore asperiores eum perferendis. Voluptate recusandae maiores iusto suscipit. Perferendis assumenda, fuga culpa a, accusantium, qui odit recusandae ducimus voluptate quidem temporibus nihil nobis consectetur autem molestiae unde. Obcaecati repudiandae animi accusamus doloremque reiciendis a quam eaque reprehenderit? Vero provident cum praesentium odio vel sit enim fuga quis ab hic, nam fugiat et adipisci quisquam exercitationem aliquid non molestiae reiciendis? Accusamus rem iure hic velit nam odio dignissimos veniam tempore minima, ex aperiam ratione laudantium ullam earum laboriosam incidunt, rerum optio perspiciatis quas quam consectetur illo. Quaerat voluptatibus, in eos praesentium obcaecati impedit accusantium quia placeat. Quos ullam molestias ab beatae exercitationem alias omnis? Tempore, voluptate. Voluptate hic suscipit eius, laudantium dolorum molestias a perferendis nemo possimus soluta fugiat, beatae in quaerat rerum iure at doloribus dignissimos! Nostrum cumque ab dolorem earum quod dolores aliquam et, aut tempore, eos facere porro repellat, voluptate obcaecati debitis aspernatur enim nisi. Ducimus ipsam quidem fuga repellat totam, velit molestiae voluptates cupiditate sunt aliquid quia! Ad magni mollitia ea, blanditiis provident quisquam optio ipsam soluta deserunt quibusdam dolore laboriosam sed aperiam odio eum saepe quos quod alias unde magnam sapiente quas nulla fugiat? Obcaecati distinctio dolore, odio placeat, ullam eum nihil temporibus deleniti nobis accusantium impedit. Excepturi, magnam. Ut eum enim reiciendis tempora repudiandae atque molestias rerum excepturi soluta veritatis modi suscipit, voluptas quia ratione? Molestias assumenda debitis sapiente iure ipsam nisi autem, aperiam laborum! Asperiores nesciunt sed tempora voluptatibus ratione iure est atque repudiandae maiores possimus mollitia maxime, exercitationem corporis, expedita officia. Distinctio nobis consequatur ducimus, vero, odit voluptatum hic, dolores culpa alias nisi voluptate officiis quasi modi autem asperiores. Reiciendis cum voluptas consequatur aliquam, maxime commodi fugit tenetur nulla voluptatem deleniti quo, totam voluptates consectetur facilis provident sequi quae repellat ab enim, quidem ipsum sapiente? Corporis nostrum sunt, cupiditate praesentium quasi animi quibusdam aliquid eum culpa corrupti sapiente, expedita error? Earum nemo inventore, facilis commodi voluptates sint quaerat in at temporibus ab, excepturi sapiente. Veniam ut eaque excepturi distinctio soluta blanditiis dignissimos est similique temporibus porro, facere reprehenderit aperiam! Nemo quibusdam sapiente veniam earum, voluptatum sit eaque laboriosam sequi eligendi reiciendis aut veritatis eveniet dolor expedita perferendis blanditiis eos ratione ipsam maxime praesentium laborum corrupti obcaecati! Eius vero repudiandae voluptates labore tempore, voluptas in? Aliquam laboriosam similique, corporis aut praesentium, placeat minus temporibus reprehenderit tempora aperiam veniam? Eius tempora, nemo unde sint esse, quam quidem repellendus eum molestiae dignissimos non quibusdam nihil animi sed, eligendi odit accusamus. Maxime a suscipit impedit officia deserunt totam, sed explicabo ut repellat cum repellendus enim minima corporis adipisci eos incidunt doloremque nemo numquam quia, expedita nisi sequi voluptatibus eligendi esse. Cum, quasi dolorum. Laborum, veritatis recusandae! Modi dignissimos, ad, eius ea explicabo voluptates, tempora quaerat laudantium doloribus laboriosam repellat. Distinctio nobis, praesentium veritatis quo officiis culpa illo nihil. Quibusdam, quasi doloremque quis, deleniti minima aliquam ducimus similique dolorem quo cupiditate eligendi incidunt, fugit accusamus necessitatibus facere voluptatem cumque? Repudiandae maxime dignissimos aspernatur atque voluptatibus necessitatibus laboriosam saepe nulla inventore, dolor esse est, rem voluptatum facere porro voluptates ipsa beatae tempore neque itaque. Saepe quaerat eum quis velit doloremque veritatis placeat enim, maiores mollitia labore. Veritatis nesciunt id cumque! Repellendus, totam iste optio, sunt itaque fugit doloremque explicabo omnis quo quam vel illum ullam temporibus? Saepe, vero molestiae necessitatibus ex iusto animi repellendus reiciendis a, quas maxime quis ullam! Ducimus, nulla non. Saepe fugiat ratione impedit vero minus aut eum labore. Ut quidem saepe, atque nemo reiciendis impedit magnam, possimus soluta molestias consequuntur laboriosam incidunt ipsam recusandae voluptatem in quibusdam culpa totam nesciunt voluptatum nobis quo. Sit cum quo accusamus minima architecto, provident modi voluptatem iusto esse quisquam, voluptatibus eius error. Voluptates, laudantium qui ipsum neque distinctio excepturi laborum vel necessitatibus porro tempore quibusdam magnam. Reiciendis dolores commodi rerum explicabo culpa, magnam ducimus voluptatum cum quasi nesciunt quam doloribus nihil cumque quod cupiditate perspiciatis soluta eligendi aspernatur. Culpa provident suscipit vitae necessitatibus voluptates dolore voluptas facilis explicabo, alias doloremque odio nobis minus fugit modi aut dicta saepe sunt aliquam, reiciendis optio quia dolor. Provident, quam excepturi. Quisquam temporibus placeat vero quas reiciendis fugiat dolores expedita ab reprehenderit earum aut aliquid voluptatum iusto sint dignissimos, adipisci velit possimus similique modi voluptatibus provident? Et, eveniet? Velit doloribus necessitatibus, expedita ullam ad deleniti. Illum repellendus consectetur deserunt atque distinctio, magnam voluptate minima tempore totam! Voluptatum, assumenda porro nihil molestias iure nisi cumque ipsa, amet culpa voluptates illo! Voluptatum, totam natus ullam nisi molestiae quod nostrum tenetur, dolore tempore minima blanditiis odio. Voluptate velit vitae eum, ab incidunt accusamus, deserunt labore similique error debitis, mollitia earum unde! Facere sit iusto placeat eius dolor, iste inventore quo voluptatum repellendus dicta minima sint voluptas soluta ducimus ipsa distinctio velit numquam dignissimos assumenda ad atque. Architecto mollitia repudiandae quia numquam atque nulla. Omnis provident sequi rem ea! Vitae blanditiis voluptatem mollitia qui exercitationem numquam facilis ratione, pariatur sequi maxime facere reprehenderit ipsum sapiente inventore neque. Totam modi, eum provident, ut id cum eligendi voluptatibus inventore quo quia, architecto facere incidunt molestiae placeat quas? Possimus consequatur aperiam perspiciatis deleniti quisquam non nobis repellat natus nostrum reiciendis eum dolore veritatis, nisi impedit excepturi, esse eveniet sequi, beatae assumenda debitis delectus voluptatum. Pariatur inventore laboriosam iste obcaecati ducimus debitis odit quisquam, exercitationem, nulla id asperiores quibusdam quo eligendi excepturi quis. Voluptatum unde asperiores, dolorum vitae iure error expedita sint id perspiciatis quisquam quod! Cum ex praesentium sunt? Non nostrum quas minima adipisci cumque officia dolor quibusdam, placeat sit ratione numquam quaerat ipsam, incidunt illum odio totam veniam. Voluptatem ratione deleniti temporibus aliquid? Temporibus ratione dolores odit! -->
-        </section>
-        <section>
-
-        </section>
-        <section>
-
+            
         </section>
         <section>
 
