index e css: nav border

--- a/index.html
+++ b/index.html
@@ -20,19 +20,26 @@
                 <img src="./img/logo-small.png" alt="">
             </div>
             <div class="left-side">
-                <a href="#">Perché Dropbox</a>
+                <div class="hoverborder">
+                <a href="#">Perché Dropbox</a></div>
                 <a href="#">Funzioni</a>
                 <a href="#">Piani e prezzi</a>
             </div>
             <div class="right-side">
-                <a href="#">Supporto</a>
+                <div class="dropdown">
+                    <a href="#">Supporto</a>
+                    <div class="dropdown-content">
+                        <p>Centro Assistenza</p>
+                    </div>
+                </div>
                 <a href="#">Contatta l'ufficio vendite</a>
                 <a href="#">Accedi</a>
-                <a class="btn" href="#">Inizia</a>
+                <a class="btn small" href="#">Inizia</a>
             </div>
         </nav>
         
     </header>
+    
     <!-- /fine header -->
     <div class="jumbo clearfix">
             <div class="text-jumbo container">
@@ -346,7 +353,7 @@
         </div>
 
     <div class="containersmall">
-        <div class="spazio">
+        <div class="spazioo">
         <h2>Domande frequenti</h2>
 
 <button class="accordion">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
